# ai-football-tactical-analysis

./: README.md
backend-fastapi/: README.md
backend-fastapi/app/: main.py
backend-fastapi/app/db/: database.py  models.py
backend-fastapi/app/pipelines/: video_pipeline.py
backend-fastapi/app/routes/: inference.py
backend-fastapi/app/schemas/: request_schema.py  response_schema.py
backend-fastapi/app/services/: ball_interpolator.py  camera_motion_service.py  detection_service.py  homography_service.py  job_service.py  possession_service.py  speed_estimator.py  team_classifier.py  tracking_service.py
backend-fastapi/app/utils/: video_utils.py
backend-fastapi/backend/api/: events.py
backend-fastapi/data/: jobs.db
contextWindow/: ContextWindow1.txt
cv-models/: cv_pipeline.py  event_engine.py  pitch_mapper.py  pyproject.toml  video_processor.py
cv-models/analytics/: tactical_analyzer.py
cv-models/ball/: ball_detector.py
cv-models/detection/: ball_detector.py  player_detector.py
cv-models/pipelines/: cv_pipeline.py
cv-models/pitch/: homography.py  pitch_homography.py  pitch_keypoint_detector.py
cv-models/team/: team_classifier.py
cv-models/tracking/: player_tracker.py  tracker.py
cv-models/utils/: video_loader.py
findings/: finding1.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: routes.tsx
frontend/src/app/components/: Card.tsx  EventTimelinePanel.tsx  JobStatusPanel.tsx  Layout.tsx  PlayerHeatmap.tsx  Sidebar.tsx  (+5 more)
results/: sample_match_events.json
scripts/: run_pipeline.py
(+6 files in other folders)
